--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 URI='mongodb+srv://aakashnkt99:aakash123@cluster1.j6xyg.mongodb.net/Aakash.aakash?retryWrites=true&w=majority&appName=Cluster1'
+
+JWT_SECRET="random#secret"
